[gd_scene load_steps=5 format=2]

[ext_resource path="res://PoisonSporeKinematic.gd" type="Script" id=1]
[ext_resource path="res://Assets/PoisonSpore.tscn" type="PackedScene" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.0439604

[sub_resource type="SphereShape" id=2]
radius = 3.0

[node name="PoisonSporeKinematic" type="KinematicBody" groups=["Interactable", "Spore"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="PoisonSpore" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.8, 0, 0, 0, 1, 0, 0.0197562, 0 )
shape = SubResource( 1 )

[node name="ReparentTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="player_sight" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="player_sight"]
shape = SubResource( 2 )

[node name="FlingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="debug" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="ReparentTimer" to="." method="_on_ReparentTimer_timeout"]
[connection signal="timeout" from="FlingTimer" to="." method="_on_FlingTimer_timeout"]
[connection signal="timeout" from="debug" to="." method="_on_debug_timeout"]
